# MediSync

./: .env  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  index.html  init_db.py  package-lock.json  package.json  prd.md  pyproject.toml  requirements.txt  setup.py  tailwind.config.js  wsgi.py
.github/workflows/: main.yml
frontend/: .eslintrc.cjs  .eslintrc.json  Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts  windsurf_deployment.yaml
frontend/src/: App.tsx  Router.tsx  index.css  main.tsx  theme.ts
frontend/src/api/: axios.ts  client.ts
frontend/src/components/: AuthRoute.tsx  AuthenticatedLayout.tsx  ErrorBoundary.tsx
frontend/src/context/: ColorModeContext.tsx
frontend/src/contexts/: AuthContext.tsx  ColorModeContext.tsx  NotificationContext.tsx  ThemeContext.tsx
frontend/src/pages/: Dashboard.tsx  EmergencyDashboard.tsx
migrations/versions/: initial_schema.py
scripts/: generate_cert.py  test_api.py
src/: .env  App.jsx  __init__.py  app.py  config.py  index.css  setup.py
src/api/: __init__.py  admin.py  app.py  config.py  errors.py  extensions.py  init_db.py  models.py  schemas.py  test_auth.py
src/api/models/: user.py  (+2 more)
src/components/: Dashboard.jsx  Hospitals.jsx  Incidents.jsx  Login.jsx  Navbar.jsx  Transfers.jsx
src/context/: AuthContext.jsx
src/instance/: app.db
src/lib/: supabase.js
src/medisync/: __init__.py
src/medisync_api.egg-info/: SOURCES.txt  requires.txt
supabase/migrations/: create_tables.sql
tests/: conftest.py  test_auth.py  test_hospital_api.py
(+73 files in other folders)
